# part-4

./: .gitignore  01. Introduction to Neural Networks.ipynb  02. Exercise - QSAR Toxicity - sol.ipynb  02. Exercise - QSAR Toxicity.ipynb  03. Deep Learning.ipynb  04. Exercise - Spam Detection - sol.ipynb  04. Exercise - Spam Detection.ipynb  05. Image Classification via CNNs.ipynb  06. A Predictive Maintenance Case Study.ipynb  07. Case Study - RUL Regression.ipynb  08. Case Study - Policy Threshold Calibration.ipynb  09. Case Study - Classification based Maintenance Policy.ipynb  10. Case Study - Autoencoders for Anomaly Detection.ipynb  11. Case Study 2 - Biomedical Data Analysis.ipynb  12. Case Study 2 -A Baseline Approach.ipynb  13. Case Study 2 -Using a Non-Linear Model.ipynb  14. Case Study 2 -Additive Feature Attribution.ipynb  README.md  lr_model.keras  mlp_model.keras  print-pdf.sh  pyproject.toml  requirements.txt
data/: shap_values.pickle
data/QSAR Toxicity/: UCI Machine Learning Repository_ QSAR oral toxicity Data Set.html
data/Spam/: UCI Machine Learning Repository_ Spambase Data Set.html
util/: util.py
