[tool.poetry]
package-mode = false

[project]
name = "part-4"
version = "0.1.0"
description = ""
authors = [
    {name = "Michele Lombardi",email = "michele.lombardi2@unibo.it"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "notebook (==6.5.6)",
    "numpy (>=2.1,<3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "pydot (>=4.0.0,<5.0.0)",
    "rise (>=5.7.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
